// proto/common.proto
syntax = "proto3";

package finalverse.common;

// Common types used across services
message ServiceInfo {
    string name = 1;
    string version = 2;
    string status = 3;
}

message ErrorInfo {
    string code = 1;
    string message = 2;
    map<string, string> details = 3;
}